--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Radio Malaysia</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sup_free_app">Support Free App</string>
 </resources>
