--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Radio Malaysia</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sup_free_app">Support Free App</string>
+    <string name="all">All</string>
+    <string name="favourite">Favourite</string>
+    <string name="recent">Recent</string>
 </resources>
